# FFN-MLP

./: pyproject.toml
